--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <body>
       <header class="cd__intro">
          <h1> Neumorphism Login Form Example </h1>
-         <p> Neumorphism Login Form </p>
+         <p> Login Preu </p>
          <div class="cd__action">
             <a href="https://www.codehim.com/text-input/neumorphism-login-and-signup-form" title="Back to download and tutorial page" class="cd__btn back">Back to Tutorial</a>
          </div>
