Diseño responsivo, faltan retoques

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="CodeHim">
-  <title> Neumorphism Login Form Example </title>
+  <title> Ingresar </title>
   <!-- Style CSS -->
   <link rel="stylesheet" href="./css/style.css">
   <!-- Demo CSS (No need to include it into your project) -->
   <link rel="stylesheet" href="./css/demo.css">
-
 </head>
 
 <body>
@@ -21,21 +20,21 @@
     <div class="main">
       <div class="container a-container" id="a-container">
         <form class="form" id="a-form" method="" action="">
-          <h2 class="form_title title">Create Account</h2>
-          <input class="form__input" type="text" placeholder="Name">
-          <input class="form__input" type="text" placeholder="Email">
-          <input class="form__input" type="password" placeholder="Password">
-          <button class="form__button button submit">SIGN UP</button>
+          <h2 class="form_title title">Acceder a las Votaciones</h2>
+          <input class="form__input" type="text" placeholder="Codigo Mineduc">
+          <input class="form__input" type="text" placeholder="Codigo SICA">
+          <button class="form__button button submit">Ingresar</button>
         </form>
       </div> 
     </div>   
     <!-- END EDMO HTML (Happy Coding!)-->
   </main>
-  <footer class="cd__credit">6to Computación - Preuniveristario del Norte</footer>
 
   <!-- Script JS -->
   <script src="./js/script.js"></script>
   <!--$%analytics%$-->
+
+  <footer class="cd__credit">6to Computación - Preuniveristario del Norte</footer>
 </body>
 
 </html>
