--- a/index.html
+++ b/index.html
@@ -21,20 +21,19 @@
       <div class="container a-container" id="a-container">
         <form class="form" id="a-form" method="" action="">
           <h2 class="form_title title">Acceder a las Votaciones</h2>
-          <input class="form__input" type="text" placeholder="Codigo Mineduc">
           <input class="form__input" type="text" placeholder="Codigo SICA">
+          <input class="form__input" type="date" placeholder="Fecha de Nacimiento">
           <button class="form__button button submit">Ingresar</button>
         </form>
       </div> 
     </div>   
     <!-- END EDMO HTML (Happy Coding!)-->
+    
   </main>
 
-  <!-- Script JS -->
-  <script src="./js/script.js"></script>
-  <!--$%analytics%$-->
+  
 
-  <footer class="cd__credit">6to Computación - Preuniveristario del Norte</footer>
+  <footer class="cd__credit">6to Computación - Preuniveristario del Norte</footer>  
 </body>
 
 </html>
