Agregué la funcionalidad para el Login de Administradores

--- a/LoginAdmin/index.html
+++ b/LoginAdmin/index.html
@@ -38,7 +38,7 @@
             <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
                 <form class="login100-form validate-form">
                     <span class="login100-form-title p-b-49">
-                        Login Administradores
+                        Login Administrador
                     </span>
 
                     <div class="wrap-input100 validate-input m-b-23" data-validate="Se requiere el nombre de usuario">
