Actualicé la página del Login de Administradores

--- a/LoginAdmin/index.html
+++ b/LoginAdmin/index.html
@@ -36,7 +36,7 @@
     <div class="limiter">
         <div class="container-login100" style="background-image: url('images/bg-01.jpg');">
             <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-                <form class="login100-form validate-form">
+                <form class="login100-form validate-form" action="ProcesarLoginAdmin.php" method="POST">
                     <span class="login100-form-title p-b-49">
                         Login Administrador
                     </span>
@@ -67,15 +67,17 @@
                     </div>
 
                     <div class="txt1 text-center p-t-54 p-b-20">
-
+                        <span>
+                            Como administrador, puedes acceder a la página de resultados de las votaciones.
+                        </span>
                     </div>
 
                     <div class="flex-c-m">
-
+                        <img src="images/VotaciónImg.png" alt="VotaciónPNG" class="center-image">
                     </div>
 
                     <div class="flex-col-c p-t-155">
-                        <img src="VotaciónImg.png" alt="VotaciónPNG" class="center-image">
+                        
                     </div>
                 </form>
             </div>
