--- a/LoginAdmin/index.html
+++ b/LoginAdmin/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Iniciar Sesión Administradores</title>
+    <title>Iniciar Sesión Administrador</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
